[package]
name = "rotate-puts"
version = "0.2.0"
edition = "2021"
authors = ["Hatter Jiang"]
repository = "https://git.hatter.ink/hatter/rotate-puts"
description = "Rotate outputs to files"
license = "MIT OR Apache-2.0"
keywords = ["log", "rotate"]
categories = ["log"]

[dependencies]
clap = "2.33"
rust_util = "0.6.41"

[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
panic = 'abort'
